--- a/notebooks/entregable/Convert XML to CSV entregable.ipynb
+++ b/notebooks/entregable/Convert XML to CSV entregable.ipynb
@@ -10,7 +10,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import findspark\n",
@@ -56,11 +58,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#FieldNames for Users\n",
-    "fileName = '/Users/Mat/Google_Drive/tfm/scifi-stackexchange/scifi.stackexchange.com/Users.xml'\n",
+    "fileName = '<file-path>/Users.xml'\n",
     "raw = (sc.textFile(fileName))\n",
     "#Removing top 2 lines form XML file,they didn't contain useful data\n",
     "headers = raw.take(2)\n",
@@ -71,7 +75,7 @@
     "           'Age','AccountId']\n",
     "Users_csvRDD=UsersRDD.map(lambda x:line2csv(x,tags_list))\n",
     "#Folder path to save processed files\n",
-    "targetFile = '/Users/Mat/Google_Drive/tfm/scifi-stackexchange/scifi.stackexchange.com/users_csv'\n",
+    "targetFile = '<file-path>/users_csv'\n",
     "Users_csvRDD.coalesce(1).saveAsTextFile(targetFile)"
    ]
   },
@@ -89,13 +93,13 @@
     "           'LastEditorUserId','LastEditorDisplayName','LastEditDate','LastActivityDate',\n",
     "           'Title','Tags','AnswerCount','CommentCount','FavoriteCount','ClosedDate',\n",
     "           'CommunityOwnedDate']\n",
-    "fileName = '/Users/Mat/Google_Drive/tfm/scifi-stackexchange/scifi.stackexchange.com/Posts.xml'\n",
+    "fileName = '<file-path>/Posts.xml'\n",
     "raw = (sc.textFile(fileName))\n",
     "#Removing top 2 lines form XML file,they didn't contain useful data\n",
     "headers = raw.take(2)\n",
     "PostsRDD = raw.filter(lambda x: x != headers)\n",
     "Posts_csvRDD=PostsRDD.map(lambda x:line2csv(x,tags_list))\n",
-    "targetFile = '/Users/Mat/Google_Drive/tfm/scifi-stackexchange/scifi.stackexchange.com/posts_csv'\n",
+    "targetFile = '<file-path>/posts_csv'\n",
     "Posts_csvRDD.coalesce(1).saveAsTextFile(targetFile)"
    ]
   },
@@ -109,13 +113,13 @@
    "source": [
     "#FieldNames for Badges\n",
     "tags_list=['Id','UserId','Name','Date','Class', 'TagBased']\n",
-    "fileName = '/Users/Mat/Google_Drive/tfm/scifi-stackexchange/scifi.stackexchange.com/Badges.xml'\n",
+    "fileName = '<file-path>/Badges.xml'\n",
     "raw = (sc.textFile(fileName))\n",
     "#Removing top 2 lines form XML file,they didn't contain useful data\n",
     "headers = raw.take(2)\n",
     "BadgesRDD = raw.filter(lambda x: x != headers)\n",
     "Badges_csvRDD=BadgesRDD.map(lambda x:line2csv(x,tags_list))\n",
-    "targetFile = '/Users/Mat/Google_Drive/tfm/scifi-stackexchange/scifi.stackexchange.com/badges_csv'\n",
+    "targetFile = '<file-path>/badges_csv'\n",
     "Posts_csvRDD.coalesce(1).saveAsTextFile(targetFile)"
    ]
   },
@@ -123,19 +127,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "#FieldNames for Comments\n",
     "tags_list=['Id','PostId','Score','Text','CreationDate', 'UserId']\n",
-    "fileName = '/Users/Mat/Google_Drive/tfm/scifi-stackexchange/scifi.stackexchange.com/Comments.xml'\n",
+    "fileName = '<file-path>/Comments.xml'\n",
     "raw = (sc.textFile(fileName))\n",
     "#Removing top 2 lines form XML file,they didn't contain useful data\n",
     "headers = raw.take(2)\n",
     "CommentsRDD = raw.filter(lambda x: x != headers)\n",
     "Comments_csvRDD=CommentsRDD.map(lambda x:line2csv(x,tags_list))\n",
-    "targetFile = '/Users/Mat/Google_Drive/tfm/scifi-stackexchange/scifi.stackexchange.com/comments_csv'\n",
+    "targetFile = '<file-path>/comments_csv'\n",
     "Comments_csvRDD.coalesce(1).saveAsTextFile(targetFile)"
    ]
   },
@@ -149,13 +154,13 @@
    "source": [
     "#FieldNames for PostHistory\n",
     "tags_list=['Id','PostHistoryTypeId','Score','PostId','RevisionGUID', 'CreationDate', 'UserId', 'Text']\n",
-    "fileName = '/Users/Mat/Google_Drive/tfm/scifi-stackexchange/scifi.stackexchange.com/PostHistory.xml'\n",
+    "fileName = '<file-path>/PostHistory.xml'\n",
     "raw = (sc.textFile(fileName))\n",
     "#Removing top 2 lines form XML file,they didn't contain useful data\n",
     "headers = raw.take(2)\n",
     "PostHistoryRDD = raw.filter(lambda x: x != headers)\n",
     "PostHistory_csvRDD=PostHistoryRDD.map(lambda x:line2csv(x,tags_list))\n",
-    "targetFile = '/Users/Mat/Google_Drive/tfm/scifi-stackexchange/scifi.stackexchange.com/posthistory_csv'\n",
+    "targetFile = '<file-path>/posthistory_csv'\n",
     "PostHistory_csvRDD.coalesce(1).saveAsTextFile(targetFile)"
    ]
   },
@@ -169,13 +174,13 @@
    "source": [
     "#FieldNames for PostLinks\n",
     "tags_list=['Id','CreationDate','PostId','RelatedPostId', 'LinkTypeId']\n",
-    "fileName = '/Users/Mat/Google_Drive/tfm/scifi-stackexchange/scifi.stackexchange.com/PostLinks.xml'\n",
+    "fileName = '<file-path>/PostLinks.xml'\n",
     "raw = (sc.textFile(fileName))\n",
     "#Removing top 2 lines form XML file,they didn't contain useful data\n",
     "headers = raw.take(2)\n",
     "PostLinksRDD = raw.filter(lambda x: x != headers)\n",
     "PostLinks_csvRDD=PostLinksRDD.map(lambda x:line2csv(x,tags_list))\n",
-    "targetFile = '/Users/Mat/Google_Drive/tfm/scifi-stackexchange/scifi.stackexchange.com/postlinks_csv'\n",
+    "targetFile = '<file-path>/postlinks_csv'\n",
     "PostLinks_csvRDD.coalesce(1).saveAsTextFile(targetFile)"
    ]
   },
@@ -189,31 +194,33 @@
    "source": [
     "#FieldNames for Tags\n",
     "tags_list=['Id','TagName','Count','ExcerptPostId', 'WikiPostId']\n",
-    "fileName = '/Users/Mat/Google_Drive/tfm/scifi-stackexchange/scifi.stackexchange.com/Tags.xml'\n",
+    "fileName = '<file-path>/Tags.xml'\n",
     "raw = (sc.textFile(fileName))\n",
     "#Removing top 2 lines form XML file,they didn't contain useful data\n",
     "headers = raw.take(2)\n",
     "TagsRDD = raw.filter(lambda x: x != headers)\n",
     "Tags_csvRDD=TagsRDD.map(lambda x:line2csv(x,tags_list))\n",
-    "targetFile = '/Users/Mat/Google_Drive/tfm/scifi-stackexchange/scifi.stackexchange.com/tags_csv'\n",
+    "targetFile = '<file-path>/tags_csv'\n",
     "Tags_csvRDD.coalesce(1).saveAsTextFile(targetFile)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#FieldNames for Tags\n",
     "tags_list=['Id','PostId','VoteTypeId','CreationDate']\n",
-    "fileName = '/Users/Mat/Google_Drive/tfm/scifi-stackexchange/scifi.stackexchange.com/Votes.xml'\n",
+    "fileName = '<file-path>/Votes.xml'\n",
     "raw = (sc.textFile(fileName))\n",
     "#Removing top 2 lines form XML file,they didn't contain useful data\n",
     "headers = raw.take(2)\n",
     "VotesRDD = raw.filter(lambda x: x != headers)\n",
     "Votes_csvRDD=VotesRDD.map(lambda x:line2csv(x,tags_list))\n",
-    "targetFile = '/Users/Mat/Google_Drive/tfm/scifi-stackexchange/scifi.stackexchange.com/votes_csv'\n",
+    "targetFile = '<file-path>/votes_csv'\n",
     "Votes_csvRDD.coalesce(1).saveAsTextFile(targetFile)"
    ]
   }
