--- a/paper/Survival_analysis_over_stackoverflow.tex
+++ b/paper/Survival_analysis_over_stackoverflow.tex
@@ -1660,12 +1660,13 @@
             Cox \& Snell & $0.0808$ \\ \hline
             Wald Test & $1966.6316$ \\ \hline
             Likelihood ratio test & $2022.9469$ \\ \hline
-            Log rank test & \\ $2011.5584$ \hline
+            Log rank test & $2011.5584$ \\ \hline
           \end{tabular}}
           \caption{Cox PH Model parameters}
           \label{tab:cox-model-parameters}
         \end{table}
 
+        The results shown on table \ref{tab:cox-model-parameters} confirms the validity of the model.
 
 
     \subsection{Algorithms scalability and stability}
@@ -1699,6 +1700,8 @@
         As can be seen on the image \ref{img:km-consistency}, all the executions provided the exact same results, although there were time variations.
 
         To compare the Cox PH's results, the betas of the models have been compared, all te executions have returned the exact same values for each parameter, comfirming the consistency of executions of the algorithm.
+
+\newpage
 
       \subsubsection{Scalability}
 
